fix scrollbar color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,27 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 15px;
-}
+@media (prefers-color-scheme: dark) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 15px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #1a1a1a;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #1a1a1a;
+  }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #242424;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #242424;
+  }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #2a2a2a;
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #2a2a2a;
+  }
 }
